--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         
         <% if current_user %>
           <li class="pull-right"><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          <li class="pull-right"><%= link_to current_user.username, user_path(current_user) %></li>
         <% else %>
           <li class="pull-right"><%= link_to "Sign up", new_user_registration_path %></li>
           <li class="pull-right"><%= link_to "Sign in", new_user_session_path %></li>
