--- a/app/javascript/styles/Item.css
+++ b/app/javascript/styles/Item.css
@@ -2,7 +2,7 @@
   text-align: left;
   background-color: #66C7F4;
   width: 200px;
-  margin: 0 15px 15px 15px;
+  margin: 15px 15px 15px 15px;
   padding: 10px;
   border: 2px solid #000000;
   border-radius: 10px;
