--- a/app/javascript/styles/index.css
+++ b/app/javascript/styles/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("https://i.imgur.com/zduL2Yu.jpg");
+  background-color: #E9D8B6;
 }
